finished additional tests to reach good Jacoco and PITTEST score